--- a/Banking.WebApi/Banking.WebApi.csproj
+++ b/Banking.WebApi/Banking.WebApi.csproj
@@ -166,6 +166,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ApplicationInsights.config" />
     <Content Include="Global.asax" />
     <Content Include="js\jquery-1.12.2.min.js" />
     <Content Include="scripts\ai.0.22.9-build00167.js" />
@@ -195,9 +196,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <Content Include="ApplicationInsights.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
